--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <style>
       .markdown-section {
-        max-width: 650px;
+        max-width: 700px;
       }
       .markdown-section h2 {
         padding: 40px 0px 10px 0px;
@@ -45,6 +45,7 @@
       window.$docsify = {
         subMaxLevel: 1,
         maxLevel: 3,
+        auto2top: true,
         // onlyCover: true,
         repo: "colinhacks/zod",
         // coverpage: true,
