--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
       }
       .markdown-section h2 {
         padding: 40px 0px 10px 0px;
+        border-bottom: 1px solid #dbdbdb;
       }
 
       .markdown-section h3 {
-        padding: 15px 0px 10px 0px;
+        padding-top: 15px;
       }
-      .markdown-section h4 {
-        padding: 15px 0px 5px 0px;
+      .markdown-section h3 code {
+        font-size: 80%;
       }
     </style>
   </head>
