Remove hash router

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         maxLevel: 3,
         auto2top: true,
         repo: "colinhacks/zod",
+        routerMode: "history",
       };
     </script>
     <script src="/docsify.js"></script>
