--- a/index.html
+++ b/index.html
@@ -2,13 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Document</title>
+    <title>Zod | Documentation</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="description" content="Description" />
+    <meta
+      name="description"
+      content="TypeScript-first schema validation with static type inference"
+    />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
+    <meta
+      name="twitter:title"
+      content="TypeScript-first schema validation with static type inference"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@colinhacks" />
+    <meta
+      name="twitter:image:src"
+      content="https://opengraph.githubassets.com/1cac1150838995e1f7d1643c00eee51a5d884f2054f995c9d3225b07b0eddb39/colinhacks/zod"
+    />
+
+    <meta
+      property="og:image"
+      content="https://opengraph.githubassets.com/1cac1150838995e1f7d1643c00eee51a5d884f2054f995c9d3225b07b0eddb39/colinhacks/zod"
+    />
+    <meta
+      property="og:image:alt"
+      content="TypeScript-first schema validation with static type inference - colinhacks/zod: TypeScript-first schema validation with static type inference"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="600" />
+    <meta property="og:site_name" content="GitHub" />
+    <meta property="og:type" content="object" />
+    <meta
+      property="og:title"
+      content="colinhacks/zod: TypeScript-first schema validation with static type inference"
+    />
+    <meta property="og:url" content="https://github.com/colinhacks/zod" />
+    <meta
+      property="og:description"
+      content="TypeScript-first schema validation with static type inference"
+    />
+
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
