Remove local assets

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         routerMode: "history",
       };
     </script>
-    <script src="/docsify.js"></script>
-    <script src="/prism.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/docsify@4.12.2/lib/docsify.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/prismjs@1.28.0/prism.min.js"></script>
   </body>
 </html>
