--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Zod | Documentation</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'none'" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta
       name="description"
@@ -10,7 +11,7 @@
     />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta
       name="twitter:title"
@@ -22,14 +23,13 @@
       name="twitter:image:src"
       content="https://opengraph.githubassets.com/1cac1150838995e1f7d1643c00eee51a5d884f2054f995c9d3225b07b0eddb39/colinhacks/zod"
     />
-
     <meta
       property="og:image"
       content="https://opengraph.githubassets.com/1cac1150838995e1f7d1643c00eee51a5d884f2054f995c9d3225b07b0eddb39/colinhacks/zod"
     />
     <meta
       property="og:image:alt"
-      content="TypeScript-first schema validation with static type inference - colinhacks/zod: TypeScript-first schema validation with static type inference"
+      content="TypeScript-first schema validation with static type inference"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="600" />
@@ -71,7 +71,6 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="msapplication-config" content="/static/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
-
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
