Add docs link to readme

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta property="og:type" content="object" />
     <meta
       property="og:title"
-      content="colinhacks/zod: TypeScript-first schema validation with static type inference"
+      content="TypeScript-first schema validation with static type inference"
     />
     <meta property="og:url" content="https://github.com/colinhacks/zod" />
     <meta
@@ -71,9 +71,21 @@
     <meta name="msapplication-config" content="/static/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
     <link
-      rel="stylesheet"
-      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
+      href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
+      type="text/css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet';"
+      title="docsify-darklight-theme"
     />
+    <link
+      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
+      type="text/css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet';"
+    />
+
     <style>
       .markdown-section {
         max-width: 700px;
