--- a/index.html
+++ b/index.html
@@ -70,21 +70,19 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="msapplication-config" content="/static/browserconfig.xml" />
     <meta name="theme-color" content="#ffffff" />
-    <link
-      href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css"
-      type="text/css"
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet';"
-      title="docsify-darklight-theme"
-    />
-    <link
-      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
-      type="text/css"
-      rel="preload"
-      as="style"
-      onload="this.onload=null;this.rel='stylesheet';"
-    />
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FG8DDV0GBR"
+    ></script>
+
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-FG8DDV0GBR");
+    </script>
 
     <style>
       .markdown-section {
