--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
       gtag("config", "G-FG8DDV0GBR");
     </script>
 
+    <link
+      href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css"
+      type="text/css"
+      rel="preload"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet';"
+    />
     <style>
       .markdown-section {
         max-width: 700px;
