docs: allow Zod to be used in dev tools at site (#2432)

--- a/index.html
+++ b/index.html
@@ -256,5 +256,6 @@
           .prepend(document.querySelector(".theme-btn"));
       });
     </script>
+    <script src="https://www.unpkg.com/zod/lib/index.umd.js"></script>
   </body>
 </html>
